# remaster-frontend

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: config.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/_assets/: databases_icon.tsx  document_icon.tsx  doping_icon.tsx  download_icon.tsx  edit_icon.tsx  remove_icon.tsx  search_icon.tsx  settings_icon.tsx  show_more.tsx  sport_result_icon.tsx  upload_icon.tsx  window_close_icon.tsx  window_maximize_icon.tsx  window_minimize_icon.tsx
src/_components/app/: App.tsx
src/_components/navigation/: Navigation.module.css  Navigation.tsx
src/_components/title-bar/: TitleBar.module.css  TitleBar.tsx
src/_context/: navigation-context.tsx
src/_hook/: useEffectIgnoreFirstRender.tsx  useNavigation.tsx  useNavigationData.tsx
src/_ui/button/: Button.module.css  Button.tsx
src/_ui/date-input/: DateInput.module.css  DateInput.tsx
src/_ui/inline-group/: InlineGroup.module.css  InlineGroup.tsx
src/_ui/number-input/: NumberInput.module.css  NumberInput.tsx
src/_ui/pagination/: Pagination.module.css  Pagination.tsx
src/_ui/section/: Section.module.css  Section.tsx
src/_ui/select/: Select.module.css  Select.tsx  _types.tsx
src/_ui/tooltip/: Tooltip.tsx
src/app/databases/: _api.tsx  _types.tsx  page.tsx
src/app/document/: _api.tsx  _types.tsx  page.tsx
src/app/documents/: _api.tsx  _types.tsx  page.tsx
src/app/doping/: _api.tsx  (+2 more)
src/app/doping-athletes/: _api.tsx  _types.tsx  page.tsx
(+90 files in other folders)
